hphp/hack/test/typecheck/akempty/akempty_promotion_4.php.exp
File "akempty_promotion_4.php", line 9, characters 5-6:
Invalid argument (Typing[4110])
  File "akempty_promotion_4.php", line 12, characters 24-26:
  Expected `int`
  File "akempty_promotion_4.php", line 7, characters 17-24:
  But got `vec<(string | [unresolved])>` because legacy arrays have been unified with Hack arrays
